Add attach_tmux_locally config

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -2,3 +2,15 @@
 title="        "
 shell=bash
 use_tmux=0
+attach_tmux_locally=0
+; If attach_tmux_locally=0, add these codes to .bashrc/.zshrc:
+;[ -z "$TMUX" -a -n "$USE_TMUX" ] && {
+;    [ -n "$ATTACH_ONLY" ] && {
+;        cd
+;        tmux a 2>/dev/null || exec tmux
+;        exit
+;    }
+;
+;    tmux new-window -c "$PWD" \; a 2>/dev/null || exec tmux
+;    exit
+;}
