Add use_cbwin config

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -1,6 +1,7 @@
 [config]
 title="        "
 shell=bash
+use_cbwin=0
 use_tmux=0
 attach_tmux_locally=0
 ; If attach_tmux_locally=1, add these codes to .bashrc/.zshrc:
