--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -15,3 +15,5 @@ attach_tmux_locally=0
 ;    tmux new-window -c "$PWD" \; a 2>/dev/null || exec tmux
 ;    exit
 ;}
+;icon=c:\Users\username\AppData\Local\lxss\bash.ico
+; Replace username with yours.
