Update icons of *.exe

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -15,5 +15,6 @@ attach_tmux_locally=0
 ;    tmux new-window -c "$PWD" \; a 2>/dev/null || exec tmux
 ;    exit
 ;}
-;icon=c:\Users\username\AppData\Local\lxss\bash.ico
-; Replace username with yours.
+;icon=C:\Users\username\AppData\Local\lxss\bash.ico
+; To use Ubuntu icon, uncomment the above line, and replace username with yours.
+; To use mintty default icon, set icon=C:\path\to\wsl-terminal\bin\mintty.exe
