cd to $HOME when running open-wsl -l and no existing tmux process

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -7,8 +7,7 @@ attach_tmux_locally=0
 ; If attach_tmux_locally=1, add these codes to .bashrc/.zshrc:
 ;[ -z "$TMUX" -a -n "$USE_TMUX" ] && {
 ;    [ -n "$ATTACH_ONLY" ] && {
-;        cd
-;        tmux a 2>/dev/null || exec tmux
+;        tmux a 2>/dev/null || cd && exec tmux
 ;        exit
 ;    }
 ;
