Fix comments in etc/wsl-terminal.conf

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -9,7 +9,9 @@ attach_tmux_locally=0
 ; If attach_tmux_locally=1, add these codes to .bashrc/.zshrc:
 ;[ -z "$TMUX" -a -n "$USE_TMUX" ] && {
 ;    [ -n "$ATTACH_ONLY" ] && {
-;        tmux a 2>/dev/null || cd && exec tmux
+;        tmux a 2>/dev/null || {
+;            cd && exec tmux
+;        }
 ;        exit
 ;    }
 ;
