Upgrade mintty and wslbridge

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -15,8 +15,8 @@ attach_tmux_locally=0
 ;        exit
 ;    }
 ;
-;    tmux new-window -c "$PWD" \; a 2>/dev/null || exec tmux
-;    exit
+;    tmux new-window -c "$PWD" 2>/dev/null && exec tmux a
+;    exec tmux
 ;}
 ;icon=C:\Users\username\AppData\Local\lxss\bash.ico
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
