--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -21,3 +21,4 @@ attach_tmux_locally=0
 ;icon=C:\Users\username\AppData\Local\lxss\bash.ico
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
 ; To use mintty default icon, set icon=C:\path\to\wsl-terminal\bin\mintty.exe
+;distro_guid=
