--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -18,7 +18,10 @@ attach_tmux_locally=0
 ;    tmux new-window -c "$PWD" 2>/dev/null && exec tmux a
 ;    exec tmux
 ;}
+
 ;icon=C:\Users\username\AppData\Local\lxss\bash.ico
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
 ; To use mintty default icon, set icon=C:\path\to\wsl-terminal\bin\mintty.exe
+
+; Run tools/write_distro_guids_to_config_file.js to generate the distro_guid config.
 ;distro_guid=
