Remove attach_tmux_locally config

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -5,8 +5,7 @@ shell=bash
 ;shell=zsh
 use_cbwin=0
 use_tmux=0
-attach_tmux_locally=0
-; If attach_tmux_locally=1, add these codes to .bashrc/.zshrc:
+; If use_tmux=1, add these codes to .bashrc/.zshrc:
 ;[ -z "$TMUX" -a -n "$USE_TMUX" ] && {
 ;    [ -n "$ATTACH_ONLY" ] && {
 ;        tmux a 2>/dev/null || {
