--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -6,8 +6,8 @@ shell=bash
 use_cbwin=0
 use_tmux=0
 ; If use_tmux=1, add these codes to .bashrc/.zshrc:
-;[ -z "$TMUX" -a -n "$USE_TMUX" ] && {
-;    [ -n "$ATTACH_ONLY" ] && {
+;[[ -z "$TMUX" && -n "$USE_TMUX" ]] && {
+;    [[ -n "$ATTACH_ONLY" ]] && {
 ;        tmux a 2>/dev/null || {
 ;            cd && exec tmux
 ;        }
