set explicit bash path ( https://github.com/goreliu/wsl-terminal/issues/46 )

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -1,7 +1,7 @@
 [config]
 title="        "
-shell=bash
-;shell=bash --login
+shell=/bin/bash
+;shell=/bin/bash --login
 ;shell=zsh
 use_tmux=0
 ; If use_tmux=1, add these codes to .bashrc/.zshrc:
