--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -1,8 +1,10 @@
 [config]
 title="        "
+
 shell=/bin/bash
 ;shell=/bin/bash --login
-;shell=zsh
+;shell=/bin/zsh
+
 use_tmux=0
 ; If use_tmux=1, add these codes to .bashrc/.zshrc:
 ;[[ -z "$TMUX" && -n "$USE_TMUX" ]] && {
