Add mintty_options config

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -19,6 +19,8 @@ use_tmux=0
 ;    exec tmux
 ;}
 
+;mintty_options=-p center
+
 ;icon=C:\Users\username\AppData\Local\lxss\bash.ico
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
 ; To use mintty default icon, set icon=C:\path\to\wsl-terminal\bin\mintty.exe
