Add keep_wsl_running config

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -19,11 +19,14 @@ use_tmux=0
 ;    exec tmux
 ;}
 
+; Set it to 1 if you want to keep tmux server or other processes running in background.
+keep_wsl_running=0
+
 ;mintty_options=-p center
 
 ;icon=C:\Users\username\AppData\Local\lxss\bash.ico
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
 ; To use mintty default icon, set icon=C:\path\to\wsl-terminal\bin\mintty.exe
 
-; Run tools/write-distro-guids-to-config-file.js to generate the distro_guid config.
+; Run tools/3-write-distro-guids-to-config-file.js to generate the distro_guid config.
 ;distro_guid=
