--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -22,7 +22,7 @@ use_tmux=0
 ; Set it to 1 if you want to keep tmux server or other processes running in background.
 keep_wsl_running=0
 
-;mintty_options=-p center
+mintty_options=-o AppID=wsl-terminal
 
 ;icon=C:\Users\username\AppData\Local\lxss\bash.ico
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
