add WSL2 support

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -28,5 +28,5 @@ keep_wsl_running=0
 ; To use Ubuntu icon, uncomment the above line, and replace username with yours.
 ; To use mintty default icon, set icon=C:\path\to\wsl-terminal\bin\mintty.exe
 
-; Run tools/3-write-distro-guids-to-config-file.js to generate the distro_guid config.
-;distro_guid=
+; Run tools/3-write-distro-to-config-file.js to generate the distro_guid config.
+;distro=
