#151: update documentation to include tmux config for fish

--- a/src/etc/wsl-terminal.conf
+++ b/src/etc/wsl-terminal.conf
@@ -19,6 +19,19 @@ use_tmux=0
 ;    exec tmux
 ;}
 
+;if you use fish add this to your ~/.config/fish/config.fish
+; if [ -z "$TMUX" ]; and [ -n "$USE_TMUX" ]
+;     if [ -n "$ATTACH_ONLY" ]
+;         if not tmux a 2>/dev/null
+;             cd; and exec tmux
+;         end
+;         exit
+;     end
+
+;     tmux new-window -c "$PWD" 2>/dev/null; and exec tmux a
+;     exec tmux
+; end
+
 ; Set it to 1 if you want to keep tmux server or other processes running in background.
 keep_wsl_running=0
 
